# reducxx

./: .gitignore  CMakeLists.txt  README.md  code-coverage.cmake
main/: CMakeLists.txt
main/ReduCxx/: Action.hpp  Composer.hpp  ReducerTraits.hpp  Store.hpp  StoreFactory.hpp  StoreSubscriptionsError.hpp  action.hpp  composer.hpp  reducer_traits.hpp  store.hpp  store_factory.hpp  store_subscriptions_error.hpp
main/ReduCxx/Async/: ActiveObject.hpp  AsyncStore.hpp  ExceptionHandlingError.hpp  SubscriptionHandle.hpp  active_object.hpp  async_store.hpp  exception_handling_error.hpp  subscription_handle.hpp
main/reducpp/: action.hpp  composer.hpp  reducer_traits.hpp  store.hpp  store_factory.hpp  store_subscriptions_error.hpp
main/reducpp/async/: active_object.hpp  async_store.hpp  exception_handling_error.hpp  subscription_handle.hpp
src/: main.cpp
src/reducpp/: action.hpp  composer.hpp  reducer_traits.hpp  store.hpp
src/reducpp/async/: active_object.hpp  async_store.hpp  exception_handling_error.hpp  subscription_handle.hpp
test/: CMakeLists.txt
test/ReduCxx/: basics.cpp  composite_state.cpp  concurrency.cpp  copy_mng.cpp  subscription.cpp  vs_type_binding.cpp
test/reducpp/: basics.cpp  composite_state.cpp  concurrency.cpp  copy_mng.cpp  subscription.cpp  vs_type_binding.cpp
